# HexaKit

./: .env.example  .gitignore  .mcp-testing.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  SOTA.md  SPEC.md  STATUS.md  catalog-info.yaml  go.mod  go.sum  worklog.md
.github/workflows/: ai-testing-orchestration.yml  alert-sync-issues.yml  audit.yml  benchmark.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  deploy.yml  docs.yml  evidence-capture.yml  example-reusable.yml  fuzzing.yml  gate-check.yml  iac-scan.yml  journey-gate.yml  legacy-tooling-gate.yml  libs-activation-ci.yml  license-compliance.yml  policy-gate.yml  publish.yml  quality-gate.yml  release-drafter.yml  release.yml  rust-quality.yml  rust-release.yml  sast-full.yml  sast-quick.yml  sbom.yml  scorecard.yml  security-guard-hook-audit.yml  security-guard.yml  security-scan.yml  security.yml  self-merge-gate.yml  snyk-scan.yml  sonarcloud.yml  (+8 more)
.hypothesis/constants/: 76a61dbe2bb38845
.work-audit/: worklog.md
Flowra/: ADR.md
agileplus/: AGENTS.md  GOVERNANCE.md
application/: dto.go
bifrost-routing/src/: tests.rs
crates/agileplus-api/: Cargo.toml
crates/agileplus-api-types/: Cargo.toml
crates/agileplus-cache/: Cargo.toml
crates/agileplus-domain/: Cargo.toml
crates/agileplus-error-core/: Cargo.toml
crates/agileplus-error-core/src/: lib.rs
crates/agileplus-events/: Cargo.toml
crates/agileplus-graph/: Cargo.toml
crates/agileplus-nats/: Cargo.toml
crates/agileplus-p2p/: Cargo.toml
crates/agileplus-sync/: Cargo.toml
crates/bifrost-routing/: Cargo.toml
crates/cipher/: deny.toml
crates/phenotype-async-traits/: Cargo.toml
crates/phenotype-cache-adapter/: Cargo.toml
crates/phenotype-cache-adapter/src/: lib.rs  redis_backend.rs
crates/phenotype-cache-adapter/tests/: cache_adapter.rs
crates/phenotype-casbin-wrapper/: Cargo.toml
crates/phenotype-config-core/: CLAUDE.md  Cargo.toml  README.md
crates/phenotype-config-core/src/: builder.rs  dirs_helper.rs  error.rs  format.rs  lib.rs  loader.rs  source.rs  unified.rs
crates/phenotype-config-loader/: Cargo.toml
crates/phenotype-config-loader/src/: lib.rs
crates/phenotype-contract/: Cargo.toml
crates/phenotype-contracts/: Cargo.toml
crates/phenotype-contracts/src/: error.rs  inbound.rs  lib.rs  models.rs  outbound.rs
crates/phenotype-contracts/src/models/: aggregate.rs  entity.rs  value_object.rs
crates/phenotype-contracts/tests/: contract_tests.rs
crates/phenotype-cost-core/: Cargo.toml
crates/phenotype-crypto/: Cargo.toml
crates/phenotype-error-core/: Cargo.toml
crates/phenotype-error-core/src/: context.rs  error.rs  lib.rs  retry.rs
crates/phenotype-errors/: Cargo.toml
crates/phenotype-errors/src/: lib.rs
crates/phenotype-event-sourcing/: Cargo.toml
crates/phenotype-event-sourcing/phenotype-event-sourcing/src/: memory.rs
crates/phenotype-event-sourcing/src/: async_store.rs  error.rs  event.rs  event_sourced.rs  hash.rs  lib.rs  memory.rs  snapshot.rs  sqlite_store.rs  store.rs
crates/phenotype-event-sourcing/tests/: event_store.rs
crates/phenotype-git-core/: Cargo.toml
crates/phenotype-git-core/src/: commit.rs  git_ops.rs  lib.rs  repository.rs
crates/phenotype-git-core/tests/: git_ops_test.rs
crates/phenotype-health/: Cargo.toml
crates/phenotype-health/src/: checkers.rs  lib.rs  tests.rs
crates/phenotype-iter/: Cargo.toml
crates/phenotype-iter/src/: lib.rs  window.rs
crates/phenotype-iter/tests/: iter_test.rs
crates/phenotype-logging/: Cargo.toml
crates/phenotype-logging/src/: formatters.rs  lib.rs
crates/phenotype-macros/: Cargo.toml
crates/phenotype-macros/examples/: builder_example.rs
crates/phenotype-macros/src/: aggregate.rs  command.rs  entity.rs  error.rs  event.rs  lib.rs  value_object.rs
crates/phenotype-mcp/: Cargo.toml
crates/phenotype-mcp/src/: lib.rs
crates/phenotype-mcp/src/tools/: mod.rs
crates/phenotype-policy-engine/: Cargo.toml
crates/phenotype-policy-engine/src/: context.rs  engine.rs  error.rs  lib.rs  loader.rs  policy.rs  result.rs  rule.rs
crates/phenotype-port-traits/: Cargo.toml
crates/phenotype-port-traits/src/: lib.rs
crates/phenotype-port-traits/src/inbound/: command.rs  event.rs  query.rs  use_case.rs
crates/phenotype-port-traits/src/outbound/: cache.rs  event.rs  repository.rs  secret.rs
crates/phenotype-process/: Cargo.toml
crates/phenotype-process/src/: lib.rs  process.rs
crates/phenotype-process/tests/: process_test.rs
crates/phenotype-rate-limit/: Cargo.toml
crates/phenotype-retry/: Cargo.toml
crates/phenotype-retry/src/: builder.rs  error.rs  lib.rs
crates/phenotype-shared-config/: Cargo.toml
crates/phenotype-shared-config/src/: dirs.rs  error.rs  source.rs
crates/phenotype-state-machine/: Cargo.toml
crates/phenotype-state-machine/src/: lib.rs
crates/phenotype-telemetry/: Cargo.toml
crates/phenotype-telemetry/src/: exporter.rs  lib.rs  metrics.rs  tracing.rs
crates/phenotype-test-infra/: Cargo.toml
crates/phenotype-test-infra/src/: lib.rs
crates/phenotype-time/: Cargo.toml
crates/phenotype-time/src/: clock.rs  duration.rs  interval.rs  lib.rs  scheduler.rs  timestamp.rs
docs/: AGENTS.md  DEFENSIVE_PATTERNS.md  LOCAL_FIRST_EXAMPLE_IMPLEMENTATION.md  LOCAL_FIRST_INDEX.md  LOCAL_FIRST_TECH_RESEARCH.md  LOC_REDUCTION_OPPORTUNITIES.md  SCAFFOLDING_JOURNEYS.md  SENTRY_GITHUB_INTEGRATION.md  SENTRY_INSTRUMENTATION.md  SENTRY_SETUP_SUMMARY.md  WORKLOG.md  architecture.md  index.md  package-lock.json  package.json
docs/sdk/: grpc-api.md  (+2 more)
domain/: aggregate.go  aggregate_test.go  value_object.go
infrastructure/: persistence.go  rest.go
pheno-cli/: go.mod
phenotype-router-monitor/: Cargo.toml
ports/: port.go  port_test.go
python/: pyproject.toml
rust/: Cargo.toml  deny.toml
scripts/: orb-down.sh  orb-up.sh  quality-gate.sh
specs/: FR-HEXAKIT-CI-REPAIR-001.md
src/: encryption.rs  hash.rs  keys.rs  lib.rs  signatures.rs
tests/: test_phench_runtime.py
(+278 files in other folders)
