[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["Phenotype Team"]
repository = "https://github.com/KooshaPari/phenotype-infrakit"
description = "Phenotype Infrastructure Kit"

[workspace]
resolver = "2"
members = [
    "crates/phenotype-async-traits",
    "crates/phenotype-contract",
    "crates/phenotype-cost-core",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
pin-project = "1"
