[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["Phenotype Team"]
repository = "https://github.com/KooshaPari/phenotype-infrakit"
description = "Phenotype Infrastructure Kit"

[workspace]
resolver = "2"
members = [
    "crates/phenotype-error-core",
    "crates/phenotype-errors",
    "crates/phenotype-contracts",
    "crates/phenotype-health",
    "crates/phenotype-iter",
    "crates/phenotype-port-traits",
    "crates/phenotype-policy-engine",
    "crates/phenotype-state-machine",
    "crates/phenotype-telemetry",
]

exclude = [
    "crates/agileplus-domain",
    "crates/agileplus-cli",
    "crates/agileplus-api",
    "crates/agileplus-grpc",
    "crates/agileplus-sqlite",
    "crates/agileplus-git",
    "crates/agileplus-plane",
    "crates/agileplus-telemetry",
    "crates/agileplus-triage",
    "crates/agileplus-events",
    "crates/agileplus-cache",
    "crates/agileplus-subcmds",
    "crates/agileplus-graph",
    "crates/agileplus-nats",
    "crates/agileplus-sync",
    "crates/agileplus-dashboard",
    "crates/agileplus-github",
    "crates/agileplus-p2p",
    "crates/agileplus-integration-tests",
    "crates/agileplus-contract-tests",
    "crates/agileplus-benchmarks",
    "crates/bifrost-routing",
    "crates/forgecode-core",
    "crates/phenotype-git-core",
    "crates/phenotype-async-traits",
    "crates/phenotype-macros",
    "rust",
    "tests/bdd",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
parking_lot = "0.12"
lru = "0.12"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
futures = "0.3"
tempfile = "3"
strum = { version = "0.26", features = ["derive"] }
once_cell = "1.19"
phenotype-error-core = { version = "0.2.0", path = "crates/phenotype-error-core" }
phenotype-errors = { version = "0.2.0", path = "crates/phenotype-errors" }

[profile.dev]
debug = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
