[package]
name = "agileplus-proto"
version = "0.1.0"
edition = "2024"
description = "Generated gRPC stubs for AgilePlus"
license = "MIT"

[workspace]

[dependencies]
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }

[package.metadata.cargo-machete]
ignored = ["prost"]

[build-dependencies]
tonic-build = "0.12"
