[package]
name = "agileplus-error-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Phenotype Team"]
description = "Unified error handling for AgilePlus ecosystem"

[dependencies]
phenotype-error-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
name = "agileplus_error_core"
path = "src/lib.rs"
