[package]
name = "phenotype-cache-adapter"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Cache adapter for Phenotype"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
