[package]
name = "phenotype-config-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Cascading TOML config loader for Phenotype ecosystem"

[dependencies]
dirs.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lib]
path = "src/lib.rs"
