[package]
name = "phenotype-config-core"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
dirs = "5.0"
figment = "0.10"
serde_yaml = "0.9"
schemars = "0.8"
jsonschema = "0.18"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
