[package]
name = "phenotype-config-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified configuration loading and management for Phenotype ecosystem"
keywords = ["config", "toml", "yaml", "json", "phenotype"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "phenotype_config_core"
path = "src/lib.rs"
