[package]
name = "phenotype-config-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified configuration loader for Phenotype using figment"
keywords = ["config", "loader", "figment", "environment"]
categories = ["config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
figment.workspace = true
dirs.workspace = true
num_cpus.workspace = true

[dev-dependencies]
tempfile.workspace = true
