[package]
name = "phenotype-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hexagonal architecture ports and contracts for phenotype-infrakit"

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
