[package]
name = "phenotype-error-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core error types and utilities for Phenotype"

[features]
default = []
diagnostics = ["dep:miette", "dep:regex"]
serialize = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
regex = { version = "1", optional = true }
miette = { workspace = true, optional = true, features = ["serde"] }
