[package]
name = "phenotype-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phenotype-error-core = { path = "../phenotype-error-core" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
