[package]
name = "phenotype-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Unified error re-exports for Phenotype"

[dependencies]
phenotype-error-core.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"
