[package]
name = "phenotype-errors"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
phenotype-error-core = { path = "../phenotype-error-core" }
