[package]
name = "phenotype-git-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git operations for Phenotype — repository info, diff, log, and status via libgit2"

[dependencies]
gix.workspace = true
thiserror.workspace = true

[lib]
path = "src/lib.rs"
