[package]
name = "phenotype-health"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Health check abstraction"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
