[package]
name = "phenotype-iter"
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/KooshaPari/phenotype-infrakit"
authors = ["Phenotype Team"]
description = "Advanced iteration utilities for lazy, memory-efficient batch processing"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
