[package]
name = "phenotype-iter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Advanced iterator utilities: windowing, chunking, batch operations, and cycle detection"

[lib]
path = "src/lib.rs"

[[test]]
name = "iter_test"
path = "tests/iter_test.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
