[package]
name = "phenotype-logging"
version.workspace = true
edition.workspace = true
authors = ["Phenotype Team"]
license = "MIT"
description = "Structured logging setup for the Phenotype ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
