[package]
name = "phenotype-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros for Phenotype DDD patterns"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
