[package]
name = "phenotype-policy-engine"
version.workspace = true
edition.workspace = true
authors = ["Phenotype Team"]
license = "MIT"
description = "Generic policy evaluation engine with configurable evaluation modes"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
