[package]
name = "phenotype-policy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generic policy evaluation engine for Phenotype, supporting rule-based policy decision-making across all domains"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
dashmap.workspace = true
toml.workspace = true
phenotype-error-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
