[package]
name = "phenotype-port-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Port and adapter traits for Phenotype"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
