[package]
name = "phenotype-process"
version = "0.2.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "Process management"

[lib]
path = "src/lib.rs"

[dependencies]
phenotype-error-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
