# Phenotype Retry Library
#
# Provides retry patterns using the tenacity crate for Rust.

[package]
name = "phenotype-retry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Retry patterns for Phenotype"

[dependencies]
# Retry library with backoff
tenacity = { version = "0.3", features = ["nightly"] }

# Async runtime
tokio = { workspace = true, features = ["time"] }

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "retry-example"
path = "examples/retry_example.rs"
required-features = []
