[package]
name = "phenotype-retry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Retry patterns for Phenotype"

[dependencies]
serde.workspace = true
thiserror.workspace = true
sha2.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "time"] }
tenacity = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "retry-example"
path = "examples/retry_example.rs"
