[package]
name = "phenotype-shared-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared configuration types and utilities for Phenotype crates"
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["toml", "yaml"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
