[package]
name = "phenotype-state-machine"
version = "0.2.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "Generic typed state machine with guards, actions, and history"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
