[package]
name = "phenotype-state-machine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "State machine implementation"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
phenotype-error-core.workspace = true
serde.workspace = true
serde_json.workspace = true
