[package]
name = "phenotype-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical telemetry (tracing + metrics + logs) for Phenotype services"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
