[package]
name = "phenotype-test-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phenotype-errors = { path = "../phenotype-errors", version = "0.2" }
dashmap.workspace = true
parking_lot.workspace = true
tempfile = "3.10"
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, optional = true }
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[features]
default = []
