[package]
name = "phenotype-test-infra"
version = "0.2.0"
edition = "2021"
authors = ["Phenotype Team"]
license = "MIT"
description = "Test infrastructure utilities for the Phenotype ecosystem: temp dirs, fixtures, log capture, assertion macros, and mock clocks."

[lib]
path = "src/lib.rs"

[dependencies]
phenotype-error-core = { version = "0.2.0", path = "../phenotype-error-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
