[package]
name = "phenotype-time"
version.workspace = true
edition.workspace = true
authors = ["Phenotype Team"]
license = "MIT"
description = "Time utilities for the Phenotype ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
